# blue-onyx

./: .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE  Packager.toml  README.md  architecture.html  benchmark.html  binaries.html  blue_onyx_config_example.json  blue_onyx_config_example_nix.json  blue_onyx_config_service_example.json  build.rs  build_installer.ps1  configuration.html  configure_blue_iris_5.html  cpu.txt  custom_model_training.html  faq.html  get_started.html  gpu.txt  index.html  install_latest_blue_onyx.ps1  installer_template.nsi  linux_install.html  models.html  packager.toml  print.html  searchindex.js  searchindex.json  stats.html  test.html  toc.html  toc.js  windows_install.html  windows_service.html
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-installer.yml  ci.yml  deploy.yml  docker-build.yml  release.yml
assets/: coco_classes.yaml  object365.yaml  rf-detr-coco80.yaml
book/: architecture.md  book.toml  title_page.md
book/src/: SUMMARY.md  architecture.md  binaries.md  configuration.md  configure_blue_iris_5.md  custom_model_training.md  faq.md  get_started.md  introduction.md  linux_install.md  models.md  stats.md  windows_install.md  windows_service.md
scripts/: install_service.ps1  uninstall_service.ps1  windows_event_logs_to_txt.ps1
src/: alpr.rs  api.rs  cli.rs  detector.rs  download_models.rs  image.rs  lib.rs  server.rs  startup_coordinator.rs  system_info.rs  worker.rs
templates/: base.html  config.html  stats.html  test.html  welcome.html
