[package]
name = "blue-onyx"
version = "0.3.0"
edition = "2021"

[dependencies]

ab_glyph = "0"
anyhow = "1"
askama = {version = "0", features = ["with-axum"]}
askama_axum = "0"
axum = { version = "0", default-features = false, features = [
    "http1",
    "json",
    "multipart",
    "tokio",
] }
base64 = "0"
bytes = "1"
clap = { version = "4", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
chrono = "0"
fast_image_resize = "5"
futures = { version = "0", default-features = false }
hf-hub = { version = "0", default-features = false, features = ["online", "tokio"] }
image = "0"
imageproc = "0"
indicatif = "0"
jpeg-encoder = "0"
mime = "0"
ndarray = "0"
num_cpus = "1"
ort = { version = "2.0.0-rc.9", default-features = false, features = [
    "ndarray",
    "load-dynamic",
    "directml",
] }
raw-cpuid = "11"
reqwest = { version = "0", features = ["stream", "multipart", "json"] }
serde = "1"
serde_yaml = "0"
smallvec = { version = "1", features = ["union"] }
tracing = { version = "0" }
tracing-appender = "0"
tracing-subscriber = { version = "0" }
tokio = { version = "1", default-features = false, features = ["signal", "fs"] }
tokio-util = { version = "0", features = ["codec"] }
uuid = { version = "1", features = ["v4"] }
zune-core = "0"
zune-jpeg = "0"

[target.'cfg(windows)'.dependencies]
ansi_term = "0"
windows = { version = "0", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_System_Threading",
] }

[build-dependencies]
ureq = "2"
zip = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
