[package]
name = "blue-onyx"
version = "0.8.0"
edition = "2021"

[dependencies]

ab_glyph = { version = "0", default-features = false }
anyhow = { version = "1", default-features = false }
askama = { version = "0.14", default-features = false, features = [
    "derive",
    "std",
] }
axum = { version = "0", default-features = false, features = [
    "http1",
    "json",
    "multipart",
    "tokio",
] }
base64 = { version = "0", default-features = false }
bytes = { version = "1", default-features = false }
clap = { version = "4", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
chrono = { version = "0", default-features = false, features = ["now"] }
crossbeam = { version = "0", default-features = false, features = ["std"] }
fast_image_resize = { version = "5", default-features = false }
futures = { version = "0", default-features = false }
hf-hub = { version = "0", default-features = false, features = ["tokio"] }
image = { version = "0", default-features = false }
imageproc = { version = "0", default-features = false }
indicatif = { version = "0", default-features = false }
jpeg-encoder = { version = "0", default-features = false, features = [
    "std",
    "simd",
] }
mime = { version = "0", default-features = false }
ndarray = { version = "0", default-features = false }
num_cpus = { version = "1", default-features = false }
ort = { version = "2.0.0-rc.10", default-features = false, features = [
    "ndarray",
    "load-dynamic",
    "directml",
] }
raw-cpuid = { version = "11", default-features = false }
reqwest = { version = "0", default-features = false, features = [
    "stream",
    "multipart",
    "json",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_yaml = { version = "0", default-features = false }
smallvec = { version = "1", features = ["union"] }
tracing = { version = "0", default-features = false }
tracing-appender = "0"
tracing-subscriber = { version = "0", default-features = false }
tokio = { version = "1", default-features = false, features = ["signal", "fs"] }
tokio-util = { version = "0", default-features = false, features = ["codec"] }
uuid = { version = "1", default-features = false, features = ["v4"] }
zune-core = { version = "0", default-features = false, features = ["std"] }
zune-jpeg = { version = "0", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
ansi_term = { version = "0", default-features = false }
windows = { version = "0", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_System_Threading",
] }
windows-service = { version = "0", default-features = false }

[build-dependencies]
num_cpus = { version = "1", default-features = false }
zip = { version = "4", default-features = false, features = ["deflate"] }
reqwest = { version = "0", default-features = false, features = [
    "blocking",
    "default-tls",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
